<resources>
    <string name="app_name">Color Balance</string>
    <string name="action_settings">Settings</string>
    <string name="action_download">Save</string>
    <string name="action_WP">White Patch</string>

    <string name="gallery">GALLERY</string>

    <string name="converted_photos_fragment">converted photos fragment</string>
    <string name="white_balance">Color Balance</string>
    <string name="color_balance">Color Balance</string>
    <string name="save">save</string>
    <string name="selected_image">selected image</string>
    <string name="original_image">original image</string>
    <string name="converted_image1">converted image 1</string>
    <string name="converted_image2">converted image 2</string>
    <string name="converted_image3">converted image 3</string>
    <string name="converted_image4">converted image 4</string>

    <string name="original_image_text">Original\n image</string>
    <string name="converted_image1_text">Histogram\nStretching</string>
    <string name="converted_image2_text">Gray\nWorld</string>
    <string name="converted_image3_text">White\nPatch</string>
    <string name="converted_image4_text">Improved\nWP</string>

    <string name="icon_wp">icon_wp</string>
    <string name="text_wp">Tap on white area in the picture above</string>
    
    // guide
    <string name="next">NEXT</string>
    <string name="guideA">Welcome! \n This fast guide will show you \n how to use this application.</string>
    <string name="guideB">Choose a picture from your gallery, \n which you want to color balance.</string>
    <string name="guide1">1. You can choose \n any filter for your picture \n from the bar.</string>
    <string name="guide2">2. Then, you will have \n an enlarge view \n of your picture here.</string>
    <string name="guide3">3. If you choose White Patch filter,</string>
    <string name="guide4">4. tap on white area \n in the picture view \n for filter change.</string>
    <string name="guide2b">5. To select a new white area \n press the button. \n The old one will be deleted.</string>
    <string name="guide5">6. You can save the picture \n from view with this button</string>
    <string name="guide6">7. or go back and choose \n another picture from your gallery.</string>
    <string name="guide7">Now you can start using \n Color Balance application</string>

    <string name="save_message1">"You don't have chosen converted picture to save"</string>
    <string name="save_message2">"Saved successfully"</string>
    <string name="save_message3">"Saving in the original quality can take a while"</string>

    <string name="WP_icon_after_first_conversion">"You can select new white area in the picture"</string>
    <string name="WP_icon_before_first_conversion">"You can select white area in the picture"</string>

    <string name="wait">"Pictures are loading"</string>
    <string name="too_large_image">"Picture is too large, choose smaller one"</string>

</resources>
