<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/selected_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/selected_image"/>
    
    <ImageButton
        android:id="@+id/original_image"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"

        android:contentDescription="@string/original_image"/>

    <ImageButton
        android:id="@+id/converted_image1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/original_image"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"

        android:contentDescription="@string/converted_image1"/>

    <ImageButton
        android:id="@+id/converted_image2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/converted_image1"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"

        android:contentDescription="@string/converted_image3"/>

</RelativeLayout>